--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
 						<input type="tel"
 								id="smsnumb" name="smsnumb" 
-								value="010-0000-0000">
+								value="01000000000">
 					</div>
 					<div style="float: left;">
 						문자내용<br>
