--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<div id="menu_wrap" class="bg_white">
 						<div class="option">
 							<form onsubmit="searchPlaces(); return false;">
-								키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15"> 
+								키워드 : <input type="text" value="부경대학교" id="keyword" size="15"> 
 								<button type="submit">검색하기</button> 
 							</form>
 						</div>
