--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<div id="menu_wrap" class="bg_white">
 						<div class="option">
 							<form onsubmit="searchPlaces(); return false;">
-								키워드 : <input type="text" value="부경대학교" id="keyword" size="15"> 
+								키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15"> 
 								<button type="submit">검색하기</button> 
 							</form>
 						</div>
@@ -135,14 +135,11 @@
 					</div>									
                 </form>
 			</div>
-		</div>
-
-		
+		</div>	
 	</nav>
 
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=clusterer,services"></script>
 	<script>
-
 		// 출발, 도착 좌표 카카오 맵 객체 생성
 		var start = new kakao.maps.LatLng(35.13367784973298, 129.1049204111099); // 대연 캠퍼스
 		var end = new kakao.maps.LatLng(35.11736284697083, 129.09162466048417); // 용당 캠퍼스
@@ -166,7 +163,7 @@
 		var psmarkers = [];
 
 		// 장소 검색 객체를 생성합니다
-		var ps = new kakao.maps.services.Places();  
+		const ps = new kakao.maps.services.Places();  
 
 		// 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
 		var psinfowindow = new kakao.maps.InfoWindow({zIndex:1});
@@ -231,7 +228,7 @@
 
 				// 마커를 생성하고 지도에 표시합니다
 				var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
-					psmarker = addMarker(placePosition, i), 
+					marker = addMarker(placePosition, i), 
 					itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
 
 				// 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
@@ -241,23 +238,23 @@
 				// 마커와 검색결과 항목에 mouseover 했을때
 				// 해당 장소에 인포윈도우에 장소명을 표시합니다
 				// mouseout 했을 때는 인포윈도우를 닫습니다
-				(function(psmarker, title) {
-					kakao.maps.event.addListener(psmarker, 'mouseover', function() {
-						displayInfowindow(psmarker, title);
+				(function(marker, title) {
+					kakao.maps.event.addListener(marker, 'mouseover', function() {
+						displayInfowindow(marker, title);
 					});
 
-					kakao.maps.event.addListener(psmarker, 'mouseout', function() {
+					kakao.maps.event.addListener(marker, 'mouseout', function() {
 						psinfowindow.close();
 					});
 
 					itemEl.onmouseover =  function () {
-						displayInfowindow(psmarker, title);
+						displayInfowindow(marker, title);
 					};
 
 					itemEl.onmouseout =  function () {
 						psinfowindow.close();
 					};
-				})(psmarker, places[i].place_name);
+				})(marker, places[i].place_name);
 
 				fragment.appendChild(itemEl);
 			}
@@ -304,15 +301,15 @@
 					offset: new kakao.maps.Point(13, 37) // 마커 좌표에 일치시킬 이미지 내에서의 좌표
 				},
 				markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
-					psmarker = new kakao.maps.Marker({
+					marker = new kakao.maps.Marker({
 					position: position, // 마커의 위치
 					image: markerImage 
 				});
 
 			marker.setMap(map); // 지도 위에 마커를 표출합니다
-			markers.push(psmarker);  // 배열에 생성된 마커를 추가합니다
+			psmarkers.push(marker);  // 배열에 생성된 마커를 추가합니다
 
-			return psmarker;
+			return marker;
 		}
 
 		// 지도 위에 표시되고 있는 마커를 모두 제거합니다
@@ -356,11 +353,11 @@
 
 		// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
 		// 인포윈도우에 장소명을 표시합니다
-		function displayInfowindow(psmarker, title) {
+		function displayInfowindow(marker, title) {
 			var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
 
-			infowindow.setContent(content);
-			infowindow.open(map, psmarker);
+			psinfowindow.setContent(content);
+			psinfowindow.open(map, marker);
 		}
 
 		// 검색결과 목록의 자식 Element를 제거하는 함수입니다
