--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<div id="menu_wrap" class="bg_white">
 						<div class="option">
 							<form onsubmit="searchPlaces(); return false;">
-								키워드 : <input type="text" value="부경대학교" id="keyword" size="15"> 
+								키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15"> 
 								<button type="submit">검색하기</button> 
 							</form>
 						</div>
@@ -160,13 +160,13 @@
 		var current_location_marker; // 현재위치 마커
 
 		// 마커를 담을 배열입니다
-		var psmarkers = [];
+		var markers = [];
 
 		// 장소 검색 객체를 생성합니다
-		const ps = new kakao.maps.services.Places();  
+		var ps = new kakao.maps.services.Places();  
 
 		// 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-		var psinfowindow = new kakao.maps.InfoWindow({zIndex:1});
+		var infowindow = new kakao.maps.InfoWindow({zIndex:1});
 
 		// 키워드로 장소를 검색합니다
 		searchPlaces();
@@ -228,7 +228,7 @@
 
 				// 마커를 생성하고 지도에 표시합니다
 				var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
-					psmarker = addMarker(placePosition, i), 
+					marker = addMarker(placePosition, i), 
 					itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
 
 				// 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
@@ -238,23 +238,23 @@
 				// 마커와 검색결과 항목에 mouseover 했을때
 				// 해당 장소에 인포윈도우에 장소명을 표시합니다
 				// mouseout 했을 때는 인포윈도우를 닫습니다
-				(function(psmarker, title) {
-					kakao.maps.event.addListener(psmarker, 'mouseover', function() {
-						displayInfowindow(psmarker, title);
+				(function(marker, title) {
+					kakao.maps.event.addListener(marker, 'mouseover', function() {
+						displayInfowindow(marker, title);
 					});
 
-					kakao.maps.event.addListener(psmarker, 'mouseout', function() {
-						psinfowindow.close();
+					kakao.maps.event.addListener(marker, 'mouseout', function() {
+						infowindow.close();
 					});
 
 					itemEl.onmouseover =  function () {
-						displayInfowindow(psmarker, title);
+						displayInfowindow(marker, title);
 					};
 
 					itemEl.onmouseout =  function () {
-						psinfowindow.close();
+						infowindow.close();
 					};
-				})(psmarker, places[i].place_name);
+				})(marker, places[i].place_name);
 
 				fragment.appendChild(itemEl);
 			}
@@ -300,24 +300,24 @@
 					spriteOrigin : new kakao.maps.Point(0, (idx*46)+10), // 스프라이트 이미지 중 사용할 영역의 좌상단 좌표
 					offset: new kakao.maps.Point(13, 37) // 마커 좌표에 일치시킬 이미지 내에서의 좌표
 				},
-				psmarkerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
-					psmarker = new kakao.maps.Marker({
+				markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
+					marker = new kakao.maps.Marker({
 					position: position, // 마커의 위치
-					image: psmarkerImage 
+					image: markerImage 
 				});
 
-			psmarker.setMap(map); // 지도 위에 마커를 표출합니다
-			psmarkers.push(marker);  // 배열에 생성된 마커를 추가합니다
+			marker.setMap(map); // 지도 위에 마커를 표출합니다
+			markers.push(marker);  // 배열에 생성된 마커를 추가합니다
 
-			return psmarker;
+			return marker;
 		}
 
 		// 지도 위에 표시되고 있는 마커를 모두 제거합니다
 		function removeMarker() {
-			for ( var i = 0; i < psmarkers.length; i++ ) {
-				psmarkers[i].setMap(null);
+			for ( var i = 0; i < markers.length; i++ ) {
+				markers[i].setMap(null);
 			}   
-			psmarkers = [];
+			markers = [];
 		}
 
 		// 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
@@ -353,11 +353,11 @@
 
 		// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
 		// 인포윈도우에 장소명을 표시합니다
-		function displayInfowindow(psmarker, title) {
+		function displayInfowindow(marker, title) {
 			var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
 
-			psinfowindow.setContent(content);
-			psinfowindow.open(map, psmarker);
+			infowindow.setContent(content);
+			infowindow.open(map, marker);
 		}
 
 		// 검색결과 목록의 자식 Element를 제거하는 함수입니다
