--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		var current_location_marker; // 현재위치 마커
 
 		// 마커를 담을 배열입니다
-		var markers = [];
+		var psmarkers = [];
 
 		// 장소 검색 객체를 생성합니다
 		var ps = new kakao.maps.services.Places();  
@@ -222,13 +222,13 @@
 			removeAllChildNods(listEl);
 
 			// 지도에 표시되고 있는 마커를 제거합니다
-			removeMarker();
+			removeMarker(psmarker);
 			
 			for ( var i=0; i<places.length; i++ ) {
 
 				// 마커를 생성하고 지도에 표시합니다
 				var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
-					marker = addMarker(placePosition, i), 
+					psmarker = addMarker(placePosition, i), 
 					itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
 
 				// 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
@@ -238,23 +238,23 @@
 				// 마커와 검색결과 항목에 mouseover 했을때
 				// 해당 장소에 인포윈도우에 장소명을 표시합니다
 				// mouseout 했을 때는 인포윈도우를 닫습니다
-				(function(marker, title) {
-					kakao.maps.event.addListener(marker, 'mouseover', function() {
-						displayInfowindow(marker, title);
+				(function(psmarker, title) {
+					kakao.maps.event.addListener(psmarker, 'mouseover', function() {
+						displayInfowindow(psmarker, title);
 					});
 
-					kakao.maps.event.addListener(marker, 'mouseout', function() {
+					kakao.maps.event.addListener(psmarker, 'mouseout', function() {
 						infowindow.close();
 					});
 
 					itemEl.onmouseover =  function () {
-						displayInfowindow(marker, title);
+						displayInfowindow(psmarker, title);
 					};
 
 					itemEl.onmouseout =  function () {
 						infowindow.close();
 					};
-				})(marker, places[i].place_name);
+				})(psmarker, places[i].place_name);
 
 				fragment.appendChild(itemEl);
 			}
@@ -301,23 +301,23 @@
 					offset: new kakao.maps.Point(13, 37) // 마커 좌표에 일치시킬 이미지 내에서의 좌표
 				},
 				markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
-					marker = new kakao.maps.Marker({
+					psmarker = new kakao.maps.Marker({
 					position: position, // 마커의 위치
 					image: markerImage 
 				});
 
-			marker.setMap(map); // 지도 위에 마커를 표출합니다
-			markers.push(marker);  // 배열에 생성된 마커를 추가합니다
+			psmarker.setMap(map); // 지도 위에 마커를 표출합니다
+			psmarkers.push(psmarker);  // 배열에 생성된 마커를 추가합니다
 
-			return marker;
+			return psmarker;
 		}
 
 		// 지도 위에 표시되고 있는 마커를 모두 제거합니다
-		function removeMarker() {
-			for ( var i = 0; i < markers.length; i++ ) {
-				markers[i].setMap(null);
+		function removeMarker(psmarker) {
+			for ( var i = 0; i < psmarkers.length; i++ ) {
+				psmarkers[i].setMap(null);
 			}   
-			markers = [];
+			psmarkers = [];
 		}
 
 		// 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
@@ -353,11 +353,11 @@
 
 		// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
 		// 인포윈도우에 장소명을 표시합니다
-		function displayInfowindow(marker, title) {
+		function displayInfowindow(psmarker, title) {
 			var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
 
 			infowindow.setContent(content);
-			infowindow.open(map, marker);
+			infowindow.open(map, psmarker);
 		}
 
 		// 검색결과 목록의 자식 Element를 제거하는 함수입니다
