--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- 현재위치 표시 버튼 -->
 	<div class="custom_control gps_btn radius_border">
 		<span onclick="current_location()"><img
-				src="assets/gps.png" alt="gps"></span>
+				src="./assets/gps.png" alt="gps"></span>
 	</div>
 
 	<!-- 사이드 바 on 버튼 -->
@@ -45,7 +45,7 @@
 	<!-- 사이렌 소리 버튼 -->
 	<div class="custom_control siren_btn radius_border">
 		<span onclick="siren()"><img src="https://cdn-icons-png.flaticon.com/512/763/763421.png" alt="사이렌"></span>
-		<audio id="siren" src="assets/siren.wav"></audio>
+		<audio id="siren" src="./assets/siren.wav"></audio>
 	</div>
 
     <!--전화-->
