--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<!-- 사이드 바 on 버튼 -->
 	<div class="custom_control sidebar_open_btn radius_border" onclick="openSidebar()">
 		<span>
-			<img src="assets/menu_open.png" alt="메뉴" 
-			onmouseover="this.src='assets/menu_close.png'"
-			onmouseout="this.src='assets/menu_open.png'">
+			<img src="./assets/menu_open.png" alt="메뉴" 
+			onmouseover="this.src='./assets/menu_close.png'"
+			onmouseout="this.src='/assets/menu_open.png'">
 		</span>
 	</div>
 
@@ -160,7 +160,7 @@
 
 		var current_location_marker; // 현재위치 마커
 
-		// 마커를 담을 배열입니다
+		// 검색 결과 마커를 담을 배열입니다
 		var psmarkers = [];
 
 		// 장소 검색 객체를 생성합니다
