--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<script src="pedestrian_route.js"></script>
 	<script src="markers.js"></script>
 	<script src="buttons.js"></script>
-	<script src="pathfinder.js"></script>
 	<script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=l7xx7b7144d6b822440c89d5008ebeb3fd17"></script>
 	<script
 		src="https//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=clusterer,services"></script>
@@ -78,9 +77,10 @@
 				
 					<div id="menu_wrap" class="bg_white">
 						<div class="option">
-							<form onsubmit="searchPlaces(); return false;">
-								키워드 : <input type="text" value="부경대학교" id="keyword" size="15"> 
-								<button type="submit">검색하기</button> 
+							<form>
+								키워드 : <input type="text" value="부경대학교 대연캠퍼스" id="keyword" size="15"> 
+								<button type="submit" onclick="searchStr(); return false;">출발지로</button> 
+								<button type="submit" onclick="searchDst(); return false;">도착지로</button> 
 							</form>
 						</div>
 						<hr>
@@ -139,7 +139,6 @@
 		</div>	
 	</nav>
 
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=clusterer,services"></script>
 	<script>
 		// 출발, 도착 좌표 카카오 맵 객체 생성
 		var start = new kakao.maps.LatLng(35.13367784973298, 129.1049204111099); // 대연 캠퍼스
@@ -163,14 +162,56 @@
 		// 검색 결과 마커를 담을 배열입니다
 		var psmarkers = [];
 
+		
 		// 장소 검색 객체를 생성합니다
-		var ps = new kakao.maps.services.Places();  
+		var ps = new kakao.maps.services.Places(); 
 
-		// 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-		var infowindow = new kakao.maps.InfoWindow({zIndex:1});
+		// 출발지 검색 함수입니다.
+		function searchStr(){
+			var keyword = document.getElementById('keyword').value;
+			ps.keywordSearch(keyword, placesSearchCB); 
 
-		// 키워드로 장소를 검색합니다
-		searchPlaces();
+			if (!strkeyword.replace(/^\s+|\s+$/g, '')) {
+			alert('키워드를 입력해주세요!');
+			return false;
+			}
+
+			// 검색된 장소를 출발지로 등록합니다
+			start = bounds
+		}
+
+		// 도착지 검색 함수입니다.
+		function searchDst(){
+			var keyword = document.getElementById('keyword').value;
+			ps.keywordSearch(keyword, placesSearchCB); 
+
+			if (!strkeyword.replace(/^\s+|\s+$/g, '')) {
+			alert('키워드를 입력해주세요!');
+			return false;
+			}
+
+			// 검색된 장소를 도착지로 등록합니다
+			end = bounds
+		}
+
+
+		// 키워드 검색 완료 시 호출되는 콜백함수 입니다
+		function placesSearchCB (data, status, pagination) {
+			if (status === kakao.maps.services.Status.OK) {
+
+				// 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
+				// LatLngBounds 객체에 좌표를 추가합니다
+				var bounds = new kakao.maps.LatLngBounds();
+
+				for (var i=0; i<data.length; i++) {
+					displayMarker(data[i]);    
+					bounds.extend(new kakao.maps.LatLng(data[i].y, data[i].x));
+				}       
+
+				// 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
+				map.setBounds(bounds);
+			} 
+		}
 
 
 		//체크박스 함수
