--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-	<script type="text/javascript" src="pedestrian_route.js"></script>
-	<script type="text/javascript" src="markers.js"></script>
-	<script type="text/javascript" src="buttons.js"></script>
+	<script src="pedestrian_route.js"></script>
+	<script src="markers.js"></script>
+	<script src="buttons.js"></script>
+	<script src="pathfinder.js"></script>
 	<script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=l7xx7b7144d6b822440c89d5008ebeb3fd17"></script>
-	<script type="text/javascript" src="https//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=clusterer,services"></script>
+	<script
+		src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2530315e93e47fca95bcdf52cafb039d&libraries=clusterer,services"></script>
 </head>
 
 <body>
@@ -21,15 +23,15 @@
 	<!-- 현재위치 표시 버튼 -->
 	<div class="custom_control gps_btn radius_border">
 		<span onclick="current_location()"><img
-				src="./assets/gps.png" alt="gps"></span>
+				src="assets/gps.png" alt="gps"></span>
 	</div>
 
 	<!-- 사이드 바 on 버튼 -->
 	<div class="custom_control sidebar_open_btn radius_border" onclick="openSidebar()">
 		<span>
-			<img src="./assets/menu_open.png" alt="메뉴" 
-			onmouseover="this.src='./assets/menu_close.png'"
-			onmouseout="this.src='/assets/menu_open.png'">
+			<img src="assets/menu_open.png" alt="메뉴" 
+			onmouseover="this.src='assets/menu_close.png'"
+			onmouseout="this.src='assets/menu_open.png'">
 		</span>
 	</div>
 
@@ -44,49 +46,61 @@
 	<!-- 사이렌 소리 버튼 -->
 	<div class="custom_control siren_btn radius_border">
 		<span onclick="siren()"><img src="https://cdn-icons-png.flaticon.com/512/763/763421.png" alt="사이렌"></span>
-		<audio id="siren" src="./assets/siren.wav"></audio>
+		<audio id="siren" src="assets/siren.wav"></audio>
 	</div>
 
     <!--전화-->
-    <div class="custom_control call_btn radius_border">
-		<span onclick="call()"><img src="https://w7.pngwing.com/pngs/811/53/png-transparent-phone-contact-icon-logo-iphone-computer-icons-telephone-call-phone-icon-electronics-text-grass-thumbnail.png" alt="전화"></span>
+	<div class="custom_control call_btn radius_border">
+		<span onclick="document.location.href='tel:112'"><img src="https://w7.pngwing.com/pngs/811/53/png-transparent-phone-contact-icon-logo-iphone-computer-icons-telephone-call-phone-icon-electronics-text-grass-thumbnail.png" alt="전화"></span>
 	</div>
 
 	<!--문자-->
 	<div class="custom_control sms_btn radius_border">
-		<span onclick="sms()"><img src="https://d29fhpw069ctt2.cloudfront.net/icon/image/38198/preview.svg" alt="문자"></span>
+		<span onclick="document.location.href='sms:010-0000-0000?body=안심귀가 서비스 비상문자입니다.'"><img src="https://d29fhpw069ctt2.cloudfront.net/icon/image/38198/preview.svg" alt="문자"></span>
 	</div>
-	
-	
+
 	<!-- 사이드 바 -->
 	<nav>
 		<div id="sidebar"> <a href="#" class="sidebar_close_btn" onclick="closeSidebar()">&times;</a>
 			<div class="contents">
 				<a href="#" class="menu" onclick="openSubSidebar_1()" >길 찾기</a>
 				<a href="#" class="menu" onclick="openSubSidebar_2()" >마커 선택</a>
-				<a href="#" class="menu" onclick="openSubSidebar_3()" >비상연락처</a>
+				<a href="#" class="menu"></a>
 				<a href="#" class="menu"></a>
 			</div>
 		</div>
 		<div id ="subSidebar_1" class ="subSidebar">
 			<div class="contents">
 				<a href="#" class="sidebar_close_btn" onclick="closeSidebar()">&times;</a>
-				<div class="map_wrap">
-					<div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-				
-					<div id="menu_wrap" class="bg_white">
-						<div class="option">
-							<form class="psinput">
-								장소검색 : <input type="text" value="부경대학교 대연캠퍼스" id="keyword" size="20" style="margin-bottom: 5px;"> <br>
-								<button type="submit" onclick="searchStr(); return false;">출발지로</button> 
-								<button type="submit" onclick="searchDst(); return false;">도착지로</button> 
+				<p>길찾기</p>
+				<div id="menu_wrap" class="bg_white">
+					<div class="option">
+						<div>
+							<form onsubmit="searchPlaces(); return false;">
+								키워드 : <input type="text" value="부경대학교" id="keyword" size="20"> 
+								<button type="submit">검색하기</button> 
 							</form>
 						</div>
-						<hr>
-						<ul id="placesList"></ul>
-						<div id="pagination"></div>
 					</div>
-				</div>	
+					<hr>
+					<ul id="placesList"></ul>
+					<div id="pagination"></div>
+				</div>
+			
+					</div>
+
+					<!---------------------------------추가된 부분----------------------------------------->
+					<!--마커 선택 버튼-->
+					<div style="float: left">
+						<input type="button" id="checkbtn" onclick="selectMarkers()" value="지도에서 경유할 시설물 마커 선택하기">
+					</div>
+					<div>
+						<p>-</p>
+						<p id="default_route" style="font-size: 15px;">기존 경로 시간, 거리 안내</p>
+						<p id="optional_route"style="font-size: 15px;">추가 경로 시간, 거리 안내</p>
+					</div>
+					
+				</form>
 			</div>
 		</div>
 		<div id ="subSidebar_2" class ="subSidebar">
@@ -105,38 +119,11 @@
                 </form>
 			</div>
 		</div>
-		<div id ="subSidebar_3" class ="subSidebar">
-			<div class="contents">
-				<a href="#" class="sidebar_close_btn" onclick="closeSidebar()">&times;</a>
-				<!-- 비상 연락처 설정 -->
-				<form class="pathsearch">
-					<div style="float: left; margin-bottom: 5px;">
-						비상전화<br>
-						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
-						<input type="tel" 
-								id="callnumb" name="callnumb" 
-								value="112">
-					</div>
-					<div style="float: left; margin-bottom: 5px;">
-						비상문자<br>
-						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
-						<input type="tel"
-								id="smsnumb" name="smsnumb" 
-								value="010-0000-0000">
-					</div>
-					<div style="float: left;">
-						문자내용<br>
-						<div style="float: left; margin-right: 5px;">
-							<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
-						</div>
-						<div style="float: right;">
-							<textarea rows="3" cols="30" id="smscont" name="smscont">안심귀가 서비스 비상문자입니다</textarea>
-						</div>
-					</div>									
-                </form>
-			</div>
-		</div>	
+		
 	</nav>
+	<div id="intro">
+		<div class="title">안심 길 찾기</div>
+	</div>
 
 	<script>
 		// 지도 표시
@@ -154,124 +141,167 @@
 
 		var current_location_marker; // 현재위치 마커
 
-		// 검색 결과 마커를 담을 배열입니다
+		// 주소-좌표 변환 객체를 생성합니다
+		var geocoder = new kakao.maps.services.Geocoder();
+
+		// 장소 검색 객체를 생성합니다
+		var ps = new kakao.maps.services.Places();  
+
+		// 출발, 도착 좌표 카카오 맵 객체 생성
+		var start = new kakao.maps.LatLng(35.13367784973298, 129.1049204111099); // 대연 캠퍼스
+		// var end = new kakao.maps.LatLng(35.11736284697083, 129.09162466048417); // 용당 캠퍼스
+		var end = new kakao.maps.LatLng(35.132568, 129.091948); 
+
+		// 마커를 담을 배열입니다
 		var psmarkers = [];
 
-		
-		// 장소 검색 객체를 생성합니다
-		var ps = new kakao.maps.services.Places(); 
+		// 키워드로 장소를 검색합니다
+		searchPlaces();
 
-		// 출발지 검색 함수입니다.
-		function searchStr(){
-			var keyword = document.getElementById('keyword').value;
-			ps.keywordSearch(keyword, placesSearchCB); 
 
-			if (!strkeyword.replace(/^\s+|\s+$/g, '')) {
-			alert('키워드를 입력해주세요!');
-			return false;
+		// 인트로 에니메이션
+
+		setTimeout(function(){
+			var intro = document.getElementById("intro");
+			var intro_opacity = 1;
+			var intro_timer = setInterval(function(){
+			intro_opacity -= 0.01;
+			intro.style.opacity = intro_opacity;
+			if(intro_opacity <= 0){
+				clearInterval(intro_timer);
+				intro.style.display = "none";
 			}
+		}, 10);
+		}, 1000);
 
-			// 검색된 장소를 출발지로 등록합니다
-			start = bounds
-			console.log(start)
-			pedestrian_route(start,end,map)
+		// 마커 정보창 끄고 닫기 함수
+		function mouseOverListener(map, marker, infoWindow) {
+			return function () {
+				infoWindow.open(map, marker);
+			};
+		}
+		function mouseOutListener(infoWindow) {
+			return function () {
+				infoWindow.close();
+			};
 		}
 
-		// 도착지 검색 함수입니다.
-		function searchDst(){
-			var keyword = document.getElementById('keyword').value;
-			ps.keywordSearch(keyword, placesSearchCB); 
-
-			if (!strkeyword.replace(/^\s+|\s+$/g, '')) {
-			alert('키워드를 입력해주세요!');
-			return false;
-			}
-
-			// 검색된 장소를 도착지로 등록합니다
-			end = bounds
-			console.log(end)
-			pedestrian_route(start,end,map)
-		}
-
-
-		// 키워드 검색 완료 시 호출되는 콜백함수 입니다
-		function placesSearchCB (data, status, pagination) {
-			if (status === kakao.maps.services.Status.OK) {
-
-				// 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
-				// LatLngBounds 객체에 좌표를 추가합니다
-				var bounds = new kakao.maps.LatLngBounds();
-
-				for (var i=0; i<data.length; i++) {
-					displayMarker(data[i]);    
-					bounds.extend(new kakao.maps.LatLng(data[i].y, data[i].x));
-				}       
-
-				// 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
-				map.setBounds(bounds);
-			} 
-		}
-
-
-		//체크박스 함수
+		//-------------------------------------------------추가된 부분
 		var CCTV_markers = [];
 		var police_markers = [];
 		var bell_markers = [];
 		var fireStation_markers = [];
 		var lamp_markers = [];
 		var clusterer;
+		
+		var passList = []; // 선택된 마커 위치 리스트
+		var passListString = ""; // 선택된 마커들의 좌표를 담을 문자열
+		var polyline; // 경로(초기화를 위해 전역변수로 선언)
+		var time = 0; // 원래 소요시간
+		var time_pass = 0; // 경유시 소요시간
+		var time_diff = 0; // 원래 시간에서 경유시 시간의 차이
+		var distance = 0; // 원래 거리
+		var distance_pass = 0; // 경유시 거리
+		var distance_diff = 0; // 원래 거리에서 경유시 거리의 차이
 
+		pedestrian_route(start, end, map);
 
-		function checkBox(obj) {
-			var result = obj.value;
-			if (obj.checked) {
-				switch (result) {
-					case "CCTV":
-						getCCTV();
-						break;
-					case "BELL":
-						getEmergencyBell();
-						break;
-					case "POLICE":
-						getPolice();
-						break;
-					case "FIRE":
-						getfireStation();
-						break;
-					case "LAMP":
-						getLamp();
-						break;
-				}
-			} else {
-			switch (result) {
-				case "CCTV":
-					for (var i = 0; i < CCTV_markers.length; i++) {
-						clusterer.removeMarker(CCTV_markers[i]);
-					}
-					break;
-				case "BELL":
-					for (var i = 0; i < bell_markers.length; i++) {
-						clusterer.removeMarker(bell_markers[i]);
-					}
-					break;
-				case "POLICE":
-					for (var i = 0; i < police_markers.length; i++) {
-						clusterer.removeMarker(police_markers[i]);
-					}
-					break;
-				case "FIRE":
-					for (var i = 0; i < fireStation_markers.length; i++) {
-						clusterer.removeMarker(fireStation_markers[i]);
-					}
-					break;
-				case "LAMP":
-					for (var i = 0; i < lamp_markers.length; i++) {
-						clusterer.removeMarker(lamp_markers[i]);
-					}
-					break;
+		//마커 선택 버튼 눌렀을 때 함수
+		function selectMarkers(){
+			//사이드바를 내리고
+			closeSidebar();
+			//모든 마커 보이기
+			getCCTV();
+			getEmergencyBell();
+			getPolice();
+			getfireStation();
+			getLamp();
+		}
+
+		//선택 마커 이미지
+		var waypoint_imgSrc = [];
+		var waypoint_markerImage = [];
+		var waypoint_marker = [];
+
+		for(var i=1; i<=5; i++){
+			waypoint_imgSrc[i] = 'assets/'+i+'.png';
+				imgSize = new kakao.maps.Size(45, 50), 
+				imgOption = {offset: new kakao.maps.Point(20, 40)};
+			waypoint_markerImage[i] = new kakao.maps.MarkerImage(waypoint_imgSrc[i], imgSize, imgOption);
+		}
+		
+		function mouseClickListener(check, i, markerPosition, marker){
+			return function(){
+				setWaypoint(check, i, markerPosition, marker);
+            };
+		}
+
+		function setWaypoint(check, i, markerPosition, marker) {
+                    //이미 클릭된 마커면 선택 취소
+                    if(check[i]) {
+                        console.log("마커 선택 취소");
+                        check[i] = false;
+						// passList 에서 markerPosition 과 같은 값을 찾아서 삭제
+						for(var j = 0; j < passList.length; j++) {
+							if(passList[j] == markerPosition) {
+								passList.splice(j, 1);
+								break;
+							}
+						}
+						setWaypointToString();
+						pedestrian_route(start, end, map);
+                        return ;
+                    }
+
+                    if(passList.length == 5){
+                        console.log("5개 이상 선택됨");
+                        return ;
+                    }
+                    else {
+						console.log("마커 선택됨");
+                        check[i] = true;
+						passList.push(markerPosition);
+						insertWayPointMarker(check, i, markerPosition ,marker);
+						setWaypointToString();
+						pedestrian_route(start, end, map);
+                    }
+                }
+		
+
+		function insertWayPointMarker(check, i, markerPosition ,original_marker){
+			var marker = new kakao.maps.Marker({
+				position: markerPosition,
+				map: map,
+				image: waypoint_markerImage[passList.length],
+				clickable: true
+			});
+			waypoint_marker.push(marker);
+			// 경유지 마커 클릭시 삭제
+			kakao.maps.event.addListener(marker, 'click', function() {
+				deleteWaypointMarker(marker);
+				setWaypoint(check, i, markerPosition, original_marker);
+			});
+		}
+
+		function deleteWaypointMarker(marker){
+			marker.setMap(null);
+			var i = waypoint_marker.indexOf(marker);
+			waypoint_marker.splice(i, 1);
+			//해당 marker 뒤 경로 마커들 이미지 당기기
+			for(var j = i; j < waypoint_marker.length; j++){
+				waypoint_marker[j].setImage(waypoint_markerImage[++i]);
 			}
 		}
-	}
+
+		function setWaypointToString(){
+			// passList의 경도, 위도는 "," 각 좌표끼리는 _로 구분하여 string으로 변환
+			passListString = "";
+			for (var i = 0; i < passList.length; i++) {
+				passListString += passList[i].La + "," + passList[i].Ma + "_";
+			}
+			passListString = passListString.substring(0, passListString.length - 1);
+		}
+
 	</script>
 </body>
 
