--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 <head>
     <title>TEST</title>
     <script src = './pathsearch.js'></script>
-    <script src = './style.css'></script>
+    <link rel ="stylesheet" href ='./style.css' type='text/css'>
+    <script
+        type="text/javascript"
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2530315e93e47fca95bcdf52cafb039d&libraries=clusterer"></script>
     <script 
         type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=services"></script>
+        src="https//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=services"></script>
 </head>
 
 
@@ -35,7 +38,7 @@
     </div>
     
 
-
+    
     <script>
         // 마커를 담을 배열입니다
         var markers = [];
