--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>TEST</title>
     <script src = './pathsearch.js'></script>
     <link rel ="stylesheet" href ='./style.css' type='text/css'>
-    <script
-        type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=2530315e93e47fca95bcdf52cafb039d&libraries=clusterer"></script>
+	<script
+		src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=clusterer,services"></script>
 </head>
 
 
@@ -35,9 +34,6 @@
     </div>
     
 
-    <script 
-        type="text/javascript"
-        src="https//dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=services"></script>
     
     <script>
         // 마커를 담을 배열입니다
