--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                         <button type="submit">검색하기</button> 
                     </form>
                 </div>
+                <div id="coordinate">
+                    좌표 :
+                </div>
             </div>
             <hr>
             <ul id="placesList"></ul>
@@ -50,6 +53,9 @@
 
         // 장소 검색 객체를 생성합니다
         var ps = new kakao.maps.services.Places();  
+        
+        // 키워드로 검색한 장소의 좌표값을 반환할 객체입니다.
+        var coordinate = new kakao.maps.LatLng(0,0)
 
         // 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
         var infowindow = new kakao.maps.InfoWindow({zIndex:1});
