--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@
         </div>
     </div>
     
-    <div id="str" class="str">
-        출발지 
+    <div class="str">
+        <b>출발지</b>
+        <div id="str">
+            좌표
+        </div>
     </div>
-    <div id="dst" class="dst">
-        도착지 
+    <div class="dst">
+        <b>도착지</b>
+        <div id="dst">
+            좌표
+        </div>
     </div>
     
     <script>
