--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         function coordtostr() {
         start = document.getElementById('coordinate')
         var str = document.getElementById('str')
-            str.innerText = start        
+            str.innerText = start.innerText
         };
 
         // 도착지를 버튼으로 입력받습니다.
         function coordtodst() {
         end = document.getElementById('coordinate')
-        var dst = document.getElementById('str')
-            dst.innerText = end
+        var dst = document.getElementById('dst')
+            dst.innerText = end.innerText
         };
         
         // 길찾기 실행
