--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="contents" style="padding-left: 15px;">
 				
 				<div style="width: 100%; height: 30px;">
-					<a href="#" class="sidebar_close_btn" onclick="closeSidebar()">&times;</a>
+					<a href="#" class="sidebar_close_btn" onclick="closeSidebar()" style="height:30px">&times;</a>
 				</div>
 
 				<br>
@@ -106,7 +106,7 @@
 							<!--키워드를 받아올 form-->
 							<form>
 								<b style="font-size: 20px; color:rgb(43, 203, 140);">키워드</b> : 
-								<input type="text" value="부경대학교" id="keyword" size="18"> 
+								<input type="text" placeholder="검색 할 키워드 ex.부경대학교" id="keyword" size="18"> 
 							</form>
 							<br>
 							<!--키워드 검색을 실행할 submit 버튼-->
@@ -115,6 +115,10 @@
 							<button type="button" class="searchbutton" onclick="selectMarkers(); return false;">경유지</button>
 							<!--길찾기를 실행할 버튼-->
 							<button type='button' class="searchbutton" onclick='letpede(); return false;'>길찾기</button>
+							<!--현재 위치를 출발지로 선택할 버튼-->
+							<button type='button' class="searchbutton" onclick='current_locationToPath(true); return false;' style="width:127px">내위치를 출발지로</button>
+							<!--현재 위치를 도착지로 선택할 버튼-->
+							<button type='button' class="searchbutton" onclick='current_locationToPath(false); return false;' style="width:127px">내위치를 도착지로</button>
 						</div>
 	
 						<br>
@@ -147,7 +151,7 @@
 
 		<div id ="subSidebar_2" class ="subSidebar">
 			<div class="contents">
-				<a href="#" class="sidebar_close_btn" onclick="closeSidebar()">&times;</a>
+				<a href="#" class="sidebar_close_btn" onclick="closeSidebar()" style="height:30px">&times;</a>
 				<!-- 마커 표시 선택 메뉴 들어갈 부분 -->
 				<form>
 					<ul>
@@ -155,38 +159,44 @@
 						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="BELL" id="BELL" value="BELL"> 비상벨</li>
 						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="POLICE" id="POLICE" value="POLICE"> 경찰서</li>
 						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="FIRE" id="FIRE" value="FIRE"> 소방서</li>
+						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="ER" id="ER" value="ER"> 응급실</li>
 						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="LAMP" id="LAMP" value="LAMP"> 가로등</li>
-						<li style="list-style:none"><input type="button" id="checkbtn" onclick="closeSidebar()" value="확인"></li>
+						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="CONVENIENCE" id="CONVENIENCE" value="CONVENIENCE"> 편의점</li>
+						<li style="list-style:none"><input type="checkbox" onchange="checkBox(this)" name="24HRSHOP" id="24HRSHOP" value="24HRSHOP"> 24시간 영업 가게</li>
+						<li style="list-style:none"><input type="button" class="searchbutton" onclick="closeSidebar()" value="확인"></li>
 					</ul>
                 </form>
 			</div>
 		</div>
 		<div id ="subSidebar_3" class ="subSidebar">
-			<div class="contents">
-				<a href="#" class="sidebar_close_btn" onclick="closeSidebar()">&times;</a>
+			<div class="contents" style="padding-left: 15px;">
+				<a href="#" class="sidebar_close_btn" onclick="closeSidebar()" style="height:30px">&times;</a>
 				<!-- 비상 연락처 설정 -->
-				<form class="pathsearch">
-					<div style="float: left; margin-bottom: 5px;">
-						비상전화<br>
-						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
+				<form>
+					<div class="emergency_contact">
+						<b>비상전화</b>
+						<br>
+						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png" style="margin-left: 20px;">
 						<input type="tel" 
 								id="callnumb" name="callnumb" 
-								value="112">
+								placeholder="전화번호('-'없이 입력)">
 					</div>
-					<div style="float: left; margin-bottom: 5px;">
-						비상문자<br>
-						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
+					<div class="emergency_contact">
+						<b>비상문자</b>
+						<br>
+						<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png" style="margin-left: 20px;">
 						<input type="tel"
 								id="smsnumb" name="smsnumb" 
-								value="010-0000-0000">
+								placeholder="전화번호('-'없이 입력)">
 					</div>
-					<div style="float: left;">
-						문자내용<br>
+					<div class="emergency_contact">
+						<b>문자내용</b>
+						<br>
 						<div style="float: left; margin-right: 5px;">
-							<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png">
+							<img src="https://cdn.discordapp.com/attachments/752108988719562776/912587994039455774/2.png" style="margin-left: 20px;">
 						</div>
 						<div style="float: right;">
-							<textarea rows="3" cols="30" id="smscont" name="smscont">안심귀가 서비스 비상문자입니다</textarea>
+							<textarea rows="3" cols="30" id="smscont" name="smscont">안심귀가 서비스 비상문자</textarea>
 						</div>
 					</div>									
 				</form>
@@ -233,6 +243,10 @@
 		<div class="title">안심 길 찾기</div>
 	</div>
 
+	<div id='loading'>
+		<div class='loading'><img src='./assets/loading.gif'></div>
+	</div>
+
 	<script>
 
         // 마커를 담을 배열입니다
@@ -263,6 +277,7 @@
 		});
 
 		var current_location_marker; // 현재위치 마커
+		var current_latlng; //현재위치 좌표
 
 		// 주소-좌표 변환 객체를 생성합니다
 		var geocoder = new kakao.maps.services.Geocoder();
@@ -273,7 +288,7 @@
         // 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
         var infowindow = new kakao.maps.InfoWindow({zIndex:1});
 
-		// 인트로 에니메이션
+		// 인트로 애니메이션
 		setTimeout(function(){
 			var intro = document.getElementById("intro");
 			var intro_opacity = 1;
@@ -299,9 +314,6 @@
 			};
 		}
 
-		
-        // 키워드로 장소를 검색합니다
-        searchPlaces();
 
         // 출발지를 버튼으로 입력받습니다.
         function coordtostr() {
@@ -329,11 +341,31 @@
             console.log(endY)
         };
 
+		//현재 위치를 경로의 출발지 혹은 도착지로 설정합니다.
+		function current_locationToPath(flag) {
+			//현재 위치 표시와 동시에 좌표 받아오기 
+			var latlng = current_location();
+			
+			//flag == true면 출발지로 설정
+			if(flag){
+				strnm.innerText = "출발지 : 현재 위치";
+				strX.innerText = latlng.La;
+				strY.innerText = latlng.Ma;
+			}
+			else {
+				dstnm.innerText = "도착지 : 현재 위치";
+				dstX.innerText = latlng.La;
+				dstY.innerText = latlng.Ma;
+			}
+		}
 		var CCTV_markers = [];
 		var police_markers = [];
 		var bell_markers = [];
 		var fireStation_markers = [];
 		var lamp_markers = [];
+		var convenience_markers = [];
+		var shop24hr_markers = [];
+		var ER_markers = [];
 		var clusterer;
 		
 		var passList = []; // 선택된 마커 위치 리스트
@@ -356,6 +388,8 @@
 			getPolice();
 			getfireStation();
 			getLamp();
+			getConvenience();
+			getShop24hr();
 		}
 
 		//선택 마커 이미지
@@ -464,6 +498,23 @@
             console.log(end)
             pedestrian_route(start, end, map);
         };
+
+
+		
+		// 로딩화면을 표시 할 함수
+		function display_loading() {
+			var loading = document.getElementById('loading')
+			loading.style.display = "flex"
+		};
+		
+		// 로딩화면을 삭제 할 함수
+		function vanish_loading() {
+			var loading = document.getElementById('loading')
+			loading.style.display = "none"
+		};
+
+		setTimeout(vanish_loading, 3000);
+
 
 	</script>
 </body>
