--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>쿠키</title>
+	<title>인터넷프로그래밍 3팀</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 	<script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=3ceca068ecbe0011266ba2a89b46f421"></script>
 	<script
 		src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=66583dec16d8abc21e4a6f52204c826a&libraries=clusterer,services"></script>
-		<script>//쿠키설정
+	<script>//쿠키설정
 		function GetCookie (name) {
     		var pairs = document.cookie.split(";"); // 쿠키문자열을 ;을 경계로 분할
     		for(var i=0; i<pairs.length; i++) {
